--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,8 +1,34 @@
+@font-face {
+    font-family: 'lakeshore';
+    src: url('fonts/LAKESHOR-webfont.eot');
+    src: url('fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/LAKESHOR-webfont.woff') format('woff'),
+         url('fonts/LAKESHOR-webfont.ttf') format('truetype'),
+         url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
+  @font-face {
+    font-family: 'airstreamregular';
+    src: url('fonts/Airstream-webfont.eot');
+    src: url('fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/Airstream-webfont.woff') format('woff'),
+         url('fonts/Airstream-webfont.ttf') format('truetype'),
+         url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 .al{
     font-size: 100px;
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color:rgb(0, 0, 0);
     color: white;
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: 0;
+    font-family: lakeshore;
 }
 
 html{
@@ -12,9 +38,67 @@ html{
 }
 
 .about{
-    background-color: rgb(114, 145, 121);
+    background-color: rgb(255, 255, 255);
+    background-size: 50%;
     align-self: left;
     font-size: 200%;
-    color: white;
+    color: rgb(0, 0, 0);
     background-size: cover;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+    margin-bottom: 0;
+
+    font-family: sans-serif;
+    font-style: italic;
+}
+
+.project-img{
+    display: flex;
+    align-self: center;
+    height: 35%;
+    width: 35%;
+    justify-content: flex-start;
+
+}
+
+.project-img-2{
+    display: flex;
+    align-self: center;
+    height: 35%;
+    width: 35%;
+    justify-content: right;
+}
+
+.project{
+    padding-top: 5%;
+    font-family: sans-serif;
+    font-size: 3pc;
+    text-align: center;
+    color: white;
+    background-position: center;
+}
+
+.project-header{
+    display: flex;
+    background-color: black;
+    color: white;
+    font-size: 4pc;
+    text-align: left;
+    font-family: sans-serif;
+    width: 50%;
+}
+
+
+.spacer{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.Project-descrip{
+    display: flex;
+    background-color: rgb(104, 104, 104);
+    width: 25%;
+    height: 25%;
+    align-content: flex-end;
 }
