--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -19,86 +19,48 @@
     font-weight: normal;
     font-style: normal;
   }
-
+.email{
+    font-family: sans-serif;
+    color: black;
+}
+.resume{
+    font-family: sans-serif;
+    color: black;
+  }
 .al{
+    flex: 0 1 auto;
     font-size: 100px;
     text-align: center;
     background-color:rgb(0, 0, 0);
     color: white;
-    margin-top: 0;
+    margin-top: 2%;
     padding-top: 0;
     margin-bottom: 0;
     font-family: lakeshore;
+    width: 75%;
+    margin-left: 12.5%;
 }
 
 html{
     background-image: url(https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
     background-size: 100%;
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
 }
 
 .about{
+    display: flex;
+    flex-direction: column; 
     background-color: rgb(255, 255, 255);
-    background-size: 50%;
-    align-self: left;
-    font-size: 200%;
+    width: 75%;
+    font-size: 2pc;
     color: rgb(0, 0, 0);
-    background-size: cover;
     margin-top: 0;
     padding-top: 0;
     text-align: center;
     margin-bottom: 0;
+    margin-left: 12.5%;
 
     font-family: sans-serif;
-    font-style: italic;
+    
 }
 
-.project-img{
-    display: flex;
-    align-self: center;
-    height: 35%;
-    width: 35%;
-    justify-content: flex-start;
-
-}
-
-.project-img-2{
-    display: flex;
-    align-self: center;
-    height: 35%;
-    width: 35%;
-    justify-content: right;
-}
-
-.project{
-    padding-top: 5%;
-    font-family: sans-serif;
-    font-size: 3pc;
-    text-align: center;
-    color: white;
-    background-position: center;
-}
-
-.project-header{
-    display: flex;
-    background-color: black;
-    color: white;
-    font-size: 4pc;
-    text-align: left;
-    font-family: sans-serif;
-    width: 50%;
-}
-
-
-.spacer{
-    padding-top: 5%;
-    padding-bottom: 5%;
-}
-
-.Project-descrip{
-    display: flex;
-    background-color: rgb(104, 104, 104);
-    width: 25%;
-    height: 25%;
-    align-content: flex-end;
-}
