--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -26,7 +26,8 @@
 
 .al{
   text-decoration: none;
-    font-size: 3pc;
+    font-size: 5pc;
+    height: 20%;
     text-align: center;
     background-color:rgb(0, 0, 0);
     color: white;
@@ -34,9 +35,9 @@
     padding-top: 0;
     margin-bottom: 0;
     font-family: 'Courier New', Courier, monospace;  
-    margin-left: 39%;
+    margin-left: 45%;
 
-    animation: animated-text 4s steps(29,end) 1s 1 normal both,
+    animation: animated-text 1s steps(29,end) 1s 1 normal both,
     animated-cursor 600ms steps(29,end) infinite;
 }
 
@@ -58,8 +59,7 @@ html{
     text-align: center;
     margin-bottom: 0;
     font-family: 'Source Code Pro', monospace;  
-    margin-left: 25%;
-    
+    margin-left: 25%;   
 }
 
 .links{
@@ -139,12 +139,12 @@ html{
 
 
 .al {
-  border-right: solid 3px rgb(136, 255, 136);
+  border-right: solid 3px rgb(255, 255, 255);
   white-space: nowrap;
   overflow: hidden;    
   font-family: 'Source Code Pro', monospace;  
   font-size: 28px;
-  color: rgb(136, 255, 136);
+  color: rgb(255, 255, 255);
 }
 
 /* Animation */
@@ -156,11 +156,11 @@ p {
 /* text animation */
 @keyframes animated-text{
   from{width: 0;}
-  to{width: 22%;}
+  to{width: 10%;}
 }
 
 /* cursor animations */
 @keyframes animated-cursor{
-  from{border-right-color: rgb(136, 255, 136);}
+  from{border-right-color: rgb(255, 255, 255);}
   to{border-right-color: transparent;}
 }
