--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -35,7 +35,7 @@
     text-decoration: none;
     color: rgb(255, 255, 255);
     margin-top: -80%;
-    padding-top: 0;
+    padding-top: -30%;
     margin-bottom: 0;
     font-family: 'Courier New', Courier, monospace;  
     margin-left: 0%;
