--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@
   font: inherit;
   vertical-align: baseline;  
 }
-
-.resume{
-  scale: initial;
+.links{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 25%;
+  margin-left: 37%;
 }
-
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
