--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   font: inherit;
   vertical-align: baseline;  
 }
+.pic{
+  border-style: solid;
+  border-radius: 100%;
+}
 .links{
   display: flex;
   flex-direction: row;
@@ -73,6 +77,7 @@ body {
   width: 100%;
   text-align: center;
 }
+
 h2 {
   text-transform: uppercase;
   font-size: 50px;
@@ -84,10 +89,19 @@ h1::after {
   content: '';
   width: 80px;
   display: block;
-  background: #fff;
-  height: 10px;
+  background: rgb(255, 0, 0);
+  height: 1px;
   margin: 30px auto;
   line-height: 1.1;
+}
+h2::after {
+  content: '';
+  width: 500px;
+  display: block;
+  background: rgb(255, 0, 0);
+  height: 1px;
+  margin: 27px auto;
+  line-height: 1;
 }
 p {
   margin: 0 0 30px 0;
