--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
   font: inherit;
   vertical-align: baseline;  
 }
+
 .pic{
+  image-resolution: inherit;
   margin-top: -5%;
   border-style: solid;
   border-radius: 100%;
