--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,16 @@
   border-style: solid;
   border-radius: 100%;
 }
+
 .links{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 25%;
-  margin-left: 37%;
+  width: 40%;
+  margin-left: 30%;
+  border-top: 2px solid red;
+  padding-top: 5px;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -86,7 +89,9 @@ h2 {
   font-size: 35px;
   font-weight: 120;
   color: #ffffff;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.2em;
+  width: 35%;
+  margin-left: 32.5%;
 }
 h1::after {
   content: '';
@@ -97,7 +102,7 @@ h1::after {
   margin: 30px auto;
   line-height: 1.1;
 }
-h2::after {
+/* h2::after {
   content: '';
   width: 500px;
   display: block;
@@ -105,7 +110,7 @@ h2::after {
   height: 1px;
   margin: 27px auto;
   line-height: 1;
-}
+} */
 p {
   margin: 0 0 30px 0;
   font-size: 24px;
@@ -152,4 +157,62 @@ p {
   h1::after {
     height: 4px;
   }
+}
+
+#draw-border {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+
+
+.name {
+  border: 0;
+  background: none;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bold;
+  position: relative;
+  outline: none;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+}
+
+.name::before, .name::after {
+  box-sizing: inherit;
+  position: absolute;
+  content: '';
+  border: 2px solid transparent;
+  width: 0;
+  height: 0;
+}
+
+.name::after {
+  bottom: 0;
+  right: 0;
+}
+
+.name::before {
+  top: 0;
+  left: 0;
+}
+
+.name:hover::before, .name:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
+.name:hover::before {
+  border-top-color: red;
+  border-right-color: red;
+  transition: width 0.3s ease-out, height 0.3s ease-out 0.3s;
+}
+
+.name:hover::after {
+  border-bottom-color: red;
+  border-left-color: red;
+  transition: border-color 0s ease-out 0.6s, width 0.3s ease-out 0.6s, height 0.3s ease-out 1s;
 }
