--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,19 @@
   border-style: solid;
   border-radius: 100%;
 }
+.pic:hover{
+  opacity: 75%;
+}
+.linkedin:hover{
+  opacity: 75%;
+}
+.github:hover{
+  opacity: 75%;
+}
+.resume:hover{
+  opacity: 75%;
 
+}
 .links{
   display: flex;
   flex-direction: row;
@@ -21,8 +33,11 @@
   justify-content: space-around;
   width: 40%;
   margin-left: 30%;
-  border-top: 2px solid red;
-  padding-top: 5px;
+  border-bottom: 2px solid red;
+  padding-bottom: 5px;
+}
+.links:hover{
+  border-bottom: 2px solid aqua;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -215,4 +230,8 @@ p {
   border-bottom-color: red;
   border-left-color: red;
   transition: border-color 0s ease-out 0.6s, width 0.3s ease-out 0.6s, height 0.3s ease-out 1s;
+}
+
+.name:hover{
+  font-size: 2.5pc;
 }
