--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,12 @@
   image-resolution: inherit;
   margin-top: -5%;
   border-style: solid;
-  border-radius: 100%;
-}
+  border-bottom-left-radius: 25%;
+  border-top-right-radius: 25%;
+  border-top-left-radius: 25%;
+  border-bottom-right-radius: 25%;}
 .pic:hover{
-  opacity: 75%;
+  border-radius: 100%;
 }
 .linkedin:hover{
   opacity: 75%;
@@ -24,7 +26,6 @@
 }
 .resume:hover{
   opacity: 75%;
-
 }
 .links{
   display: flex;
@@ -34,10 +35,13 @@
   width: 40%;
   margin-left: 30%;
   border-bottom: 2px solid red;
+  border-top: 2px solid red;
+  padding-top: 7px;
   padding-bottom: 5px;
 }
 .links:hover{
   border-bottom: 2px solid aqua;
+  border-top: 2px solid aqua;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -138,7 +142,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 100px) {
+@media only screen and (max-width: 1000px) {
   h1 {
     font-size: 15px;
   }
@@ -147,7 +151,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 100px) {
+@media only screen and (max-width: 1000px) {
   #intro {
     padding: 0 10px;
   }
@@ -165,7 +169,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 100px) {
+@media only screen and (max-width: 1000px) {
   h1 {
     font-size: 15px;
   }
