--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@
 }
 
 .pic{
-  image-resolution: inherit;
+  height: 250px;
+  
   margin-top: -5%;
   border-style: solid;
   border-bottom-left-radius: 25%;
