--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,11 @@ body {
 }
 
 #particles {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   overflow: hidden;
+  margin-left: 5%;
+  margin-top: 2.5%;
 }
 
 #intro {
