--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,10 @@
   border-top-left-radius: 25%;
   border-bottom-right-radius: 25%;}
 .pic:hover{
-  border-radius: 100%;
-}
+  border-bottom-left-radius: 100%;
+  border-top-right-radius: 100%;
+  border-top-left-radius: 100%;
+  border-bottom-right-radius: 100%;}
 .linkedin:hover{
   opacity: 75%;
 }
@@ -39,6 +41,7 @@
   border-top: 2px solid red;
   padding-top: 7px;
   padding-bottom: 5px;
+  background-color: transparent;
 }
 .links:hover{
   border-bottom: 2px solid aqua;
@@ -90,11 +93,9 @@ body {
 }
 
 #particles {
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  margin-left: 5%;
-  margin-top: 2.5%;
 }
 
 #intro {
@@ -139,13 +140,13 @@ p {
   font-family: 'Roboto', sans-serif;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 100px) {
   h1 {
     font-size: 15px;
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 100px) {
   h1 {
     font-size: 15px;
   }
@@ -154,7 +155,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 100px) {
   #intro {
     padding: 0 10px;
   }
@@ -172,7 +173,7 @@ p {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 100px) {
   h1 {
     font-size: 15px;
   }
@@ -243,5 +244,5 @@ p {
 }
 
 .name:hover{
-  font-size: 2.5pc;
+  font-size: 2.3pc;
 }
