--- a/css/style.css
+++ b/css/style.css
@@ -20,15 +20,21 @@
   border-bottom-left-radius: 100%;
   border-top-right-radius: 100%;
   border-top-left-radius: 100%;
-  border-bottom-right-radius: 100%;}
+  border-bottom-right-radius: 100%;
+}
 .linkedin:hover{
   opacity: 75%;
+  zoom: 1.5;
 }
 .github:hover{
   opacity: 75%;
+  zoom: 1.5;
+
 }
 .resume:hover{
   opacity: 75%;
+  zoom: 1.5;
+
 }
 .links{
   display: flex;
@@ -46,6 +52,7 @@
 .links:hover{
   border-bottom: 2px solid aqua;
   border-top: 2px solid aqua;
+  zoom: 1.2;
 }
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -205,6 +212,7 @@ p {
   padding: 10px 20px;
   box-sizing: border-box;
   margin-bottom: 50px;
+  justify-content: center;
 }
 
 .name::before, .name::after {
@@ -244,5 +252,5 @@ p {
 }
 
 .name:hover{
-  font-size: 2.3pc;
+  zoom: 1.5;
 }
