--- a/css/certstyle.css
+++ b/css/certstyle.css
@@ -14,7 +14,12 @@ body{
     font-family: 'Montserrat', sans-serif;
     padding-bottom: 10px;
 }
-
+a {
+    text-decoration: none;
+    text-emphasis: none;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
 .projects {
     font-size: 3em;
     border-bottom:2px solid red;
@@ -51,7 +56,7 @@ img{
     margin-left: 11%;
 }
 .projDescrip {
-    background-color: rgb(199, 199, 199);
+    background-color: black;
     font-size: 2em;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
@@ -61,10 +66,14 @@ img{
     padding-top: 1%;
     padding-bottom: 1%;
     margin-bottom: 3%;
-    color: rgb(100, 100, 100);
+    color: rgb(189, 189, 189);
 }
 ul{
     list-style: none;    
+}
+
+.projDescrip:hover {
+    zoom: 1.1;
 }
 
 .projTitle::after {
@@ -77,3 +86,60 @@ ul{
   line-height: 1;
 }
 
+#draw-border {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  
+ 
+  .projDescrip {
+    border: 0;
+    background: none;
+    color: rgb(223, 223, 223);
+    position: relative;
+    outline: none;
+    padding: 10px 20px;
+    box-sizing: border-box;
+    margin-bottom: 50px;
+    justify-content: center;
+  }
+  
+  .projDescrip::before, .projDescrip::after {
+    box-sizing: inherit;
+    position: absolute;
+    content: '';
+    border: 2px solid transparent;
+    width: 0;
+    height: 0;
+  }
+  
+  .projDescrip::after {
+    bottom: 0;
+    right: 0;
+  }
+  
+  .projDescrip::before {
+    top: 0;
+    left: 0;
+  }
+  
+  .projDescrip:hover::before, .projDescrip:hover::after {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .projDescrip:hover::before {
+    border-top-color: red;
+    border-right-color: red;
+    transition: width 0.3s ease-out, height 0.3s ease-out 0.3s;
+  }
+  
+  .projDescrip:hover::after {
+    border-bottom-color: red;
+    border-left-color: red;
+    transition: border-color 0s ease-out 0.6s, width 0.3s ease-out 0.6s, height 0.3s ease-out 1s;
+  }
+  
